Stop tag drop-down lists from wrapping
tracks internal commit 9633881d53b7de7c51ef4940aef3939bd111d7dc

--- a/plugins/Ajax/htdocs/images/tag-ui.css
+++ b/plugins/Ajax/htdocs/images/tag-ui.css
@@ -132,6 +132,7 @@ div.tag-display li.t > .tmenu li.descriptive {
 	background-color: inherit;
 }
 
+div.tag-display,
 div.tag-display > h1.legend {
 	width: auto !important;
 }
